.metals/metals.log
2022.12.26 15:41:16 INFO  tracing is disabled for protocol LSP, to enable tracing of incoming and outgoing JSON messages create an empty file at /home/azzi/ari/TicketsConcert/.metals/lsp.trace.json or /home/azzi/.cache/metals/lsp.trace.json
2022.12.26 15:41:18 INFO  logging to file /home/azzi/ari/TicketsConcert/.metals/metals.log
2022.12.26 15:41:18 INFO  Started: Metals version 0.11.9+73-da1b1a97-SNAPSHOT in workspace '/home/azzi/ari/TicketsConcert' for client Visual Studio Code 1.74.1.
2022.12.26 15:41:24 INFO  time: initialize in 5.83s
2022.12.26 15:41:26 WARN  Build server is not auto-connectable.
2022.12.26 15:41:26 WARN  no build target for: /home/azzi/ari/TicketsConcert/src/main/java/fil/ipint/Controller/ArtisteController.java
déc. 26, 2022 3:41:27 PM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
AVERTISSEMENT: Unmatched cancel notification for request id 3
2022.12.26 15:41:30 INFO  time: code lens generation in 3.05s
2022.12.26 15:42:08 WARN  no build target for: /home/azzi/ari/TicketsConcert/src/main/java/fil/ipint/Controller/ArtisteController.java
2022.12.26 15:42:53 WARN  no build target for: /home/azzi/ari/TicketsConcert/src/main/java/fil/ipint/Service/ServiceImplementation/ConcertServiceImpl.java
2022.12.26 15:42:54 INFO  time: code lens generation in 1.32s
déc. 26, 2022 3:42:55 PM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
AVERTISSEMENT: Unmatched cancel notification for request id 69
2022.12.26 15:43:44 WARN  no build target for: /home/azzi/ari/TicketsConcert/src/main/java/fil/ipint/Service/ServiceImplementation/ConcertServiceImpl.java
2022.12.26 15:54:44 WARN  no build target for: /home/azzi/ari/TicketsConcert/src/main/java/fil/ipint/Service/ServiceImplementation/ConcertServiceImpl.java
2022.12.26 15:54:44 WARN  no build target for: /home/azzi/ari/TicketsConcert/src/main/java/fil/ipint/Service/ServiceImplementation/ConcertServiceImpl.java
2022.12.26 15:54:44 WARN  Running javac-semanticdb failed for file:///home/azzi/ari/TicketsConcert/src/main/java/fil/ipint/Service/ServiceImplementation/ConcertServiceImpl.java. Output:
/home/azzi/ari/TicketsConcert/src/main/java/fil/ipint/Service/ServiceImplementation/ConcertServiceImpl.java:20: error: ';' expected
    private ArtisteRepository HashMap <artisteRepository> ();
                                     ^
/home/azzi/ari/TicketsConcert/src/main/java/fil/ipint/Service/ServiceImplementation/ConcertServiceImpl.java:20: error: illegal start of type
    private ArtisteRepository HashMap <artisteRepository> ();
                                                          ^
/home/azzi/ari/TicketsConcert/src/main/java/fil/ipint/Service/ServiceImplementation/ConcertServiceImpl.java:20: error: '(' expected
    private ArtisteRepository HashMap <artisteRepository> ();
                                                           ^
3 errors
2022.12.26 15:55:27 WARN  no build target for: /home/azzi/ari/TicketsConcert/src/main/java/fil/ipint/Service/ServiceImplementation/ConcertServiceImpl.java
déc. 26, 2022 3:55:29 PM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
AVERTISSEMENT: Unmatched cancel notification for request id 314
déc. 26, 2022 10:06:44 PM org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint notify
INFOS: Unsupported notification method: $/setTrace
déc. 26, 2022 10:06:48 PM org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint notify
INFOS: Unsupported notification method: $/setTrace
2022.12.27 11:39:22 INFO  shutting down Metals
